# BotContabilidad

./: .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  main.py  pyproject.toml
src/: config.py  main.py
src/ai/: deepseek_service.py  ollama_service.py  whisper_service.py
src/dispatcher/: command_dispatcher.py
src/dispatcher/commands/: cash_service.py  employees_service.py  expenses_service.py  sheets_service.py  summary_service.py  undo_service.py
src/google_auth/: auth_controller.py  auth_manager.py
src/google_drive/: google_drive_service.py
src/google_sheets/: google_sheets_service.py
src/whatsapp/: whatsapp_controller.py  whatsapp_service.py
